[gd_scene load_steps=9 format=3 uid="uid://b5ispyx76g4kw"]

[ext_resource type="Script" uid="uid://df6octp0pt5gs" path="res://scripts/menus/main_menu.gd" id="1_1hnlc"]
[ext_resource type="Texture2D" uid="uid://c1ro1wx3tj8bv" path="res://assets/menu_art/title.png" id="2_1hnlc"]
[ext_resource type="Texture2D" uid="uid://byxo1bgg1lshv" path="res://assets/menu_art/save.png" id="3_1hnlc"]
[ext_resource type="Texture2D" uid="uid://bey0ycdl17v07" path="res://assets/menu_art/loadmap.png" id="4_50h1w"]
[ext_resource type="Texture2D" uid="uid://ecj4kh12im8f" path="res://assets/menu_art/high_score.png" id="5_1hnlc"]
[ext_resource type="Texture2D" uid="uid://bx5c80dej7kfn" path="res://assets/menu_art/label_options.png" id="6_1hnlc"]
[ext_resource type="Texture2D" uid="uid://b34557gckst7g" path="res://assets/menu_art/exit_game.png" id="7_1hnlc"]
[ext_resource type="Texture2D" uid="uid://c7nsvtcgshpnc" path="res://assets/menu_art/characters.png" id="8_1hnlc"]

[node name="Main Menu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
script = ExtResource("1_1hnlc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Title Art" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_1hnlc")

[node name="Menu Buttons" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="Save" type="TextureButton" parent="HBoxContainer/VBoxContainer/Menu Buttons"]
layout_mode = 2
texture_normal = ExtResource("3_1hnlc")

[node name="Load Map" type="TextureButton" parent="HBoxContainer/VBoxContainer/Menu Buttons"]
layout_mode = 2
texture_normal = ExtResource("4_50h1w")

[node name="High Scores" type="TextureButton" parent="HBoxContainer/VBoxContainer/Menu Buttons"]
layout_mode = 2
texture_normal = ExtResource("5_1hnlc")

[node name="Options" type="TextureButton" parent="HBoxContainer/VBoxContainer/Menu Buttons"]
layout_mode = 2
texture_normal = ExtResource("6_1hnlc")

[node name="Exit" type="TextureButton" parent="HBoxContainer/VBoxContainer/Menu Buttons"]
layout_mode = 2
texture_normal = ExtResource("7_1hnlc")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Menu Art" type="TextureRect" parent="HBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("8_1hnlc")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Menu Buttons/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Menu Buttons/Load Map" to="." method="_on_load_map_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Menu Buttons/High Scores" to="." method="_on_high_scores_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Menu Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Menu Buttons/Exit" to="." method="_on_exit_pressed"]
